mongo running on atlas - no need to do any local installations

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
 PASSPORT_SECRET=AVeryLongSecretStringBlog.
 DB_URL="mongodb://localhost:27017/Blog"
+DB_ATLAS_URL="mongodb+srv://maiselmanwikki:Kaqbiw-decrug-nobwe0@blogcluster.z00ljvw.mongodb.net/VikisBlog"
