--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
